--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3-rc.0",
     "passport": "^0.5.0",
+    "passport-kakao": "^1.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -52,6 +53,8 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.0.0",
+    "@types/passport": "^1.0.7",
+    "@types/passport-kakao": "^0.2.1",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
