--- a/package.json
+++ b/package.json
@@ -27,11 +27,12 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-socket.io": "^8.2.1",
     "@nestjs/swagger": "^5.1.4",
     "@nestjs/typeorm": "^8.0.2",
-    "@nestjs/websockets": "^8.2.0",
-    "@types/express-session": "^1.17.4",
+    "@nestjs/websockets": "^8.2.1",
     "@types/Multer": "npm:@types/multer@^1.4.7",
+    "@types/express-session": "^1.17.4",
     "bcrypt": "^5.0.1",
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
